--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Glob API URL
 VITE_GLOB_API_URL=/api
-
+OPENAI_API_KEY=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
 VITE_APP_API_BASE_URL=http://127.0.0.1:3002/
 
 # Whether long replies are supported, which may result in higher API fees
