--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-        { "src": "vercel.py", "use": "@vercel/python" },
-        { "use": "@vercel/static", "src": "dist" }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/vercel.py"
-        }
-    ],
-    "env": {
-        "VERCEL": "1"
-    }
+	"version": 2,
+	"builds": [
+		{
+			"use": "@vercel/python",
+			"src": "vercel.py"
+		},
+		{
+			"use": "@vercel/static",
+			"src": "dist",
+			"cleanUrls": true,
+			"headers": [{ "source": "**/*.woff2", "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }] }]
+		}
+	],
+	"routes": [{ "src": "/(.*)", "dest": "/vercel.py" }],
+	"env": {
+		"VERCEL": "1"
+	}
 }
